# qbspinfo

./: CMakeLists.txt  README.md
src/: main.cpp
src/core/: config.cpp  config.h  entityitem.cpp  entityitem.h  entitymodel.cpp  entitymodel.h  qbspinfocore.cpp  qbspinfocore.h
src/ui/: aboutdialog.cpp  aboutdialog.h  aboutdialog.ui  configdialog.cpp  configdialog.h  configdialog.ui  mainwindow.cpp  mainwindow.h  mainwindow.ui
